[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "spmpy"
version = "0.1.0"
license = {file = "LICENSE"}
description = "A package to read and display nanonis files"

requires-python = ">=3.9"
readme = "README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "matplotlib",
    "nanonispy",
    "numpy",
    "spiepie",
]

[project.optional-dependencies]
dev = [
  "bumpver==2023.1129",
  "pre-commit==3.5.0",
  "pytest==7.4.3",
  "pytest-cov==2.6.1",
]
